Adding the basic, non styled, functionality to list folders of an Inbox per user. Refactoring of existing code. Others

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Demo</title>
-    <meta name="description" content="" />
+    <title>Login Page</title>
+    <meta name="Login Page for the Email Application" content="" />
     <meta name="viewport" content="width=device-width" />
     <base href="/" />
   </head>
