--- a/src/main/resources/templates/inbox-page.html
+++ b/src/main/resources/templates/inbox-page.html
@@ -11,13 +11,78 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
             crossorigin="anonymous"></script>
+
+    <style>
+        .container {
+          display: grid;
+
+          grid-template-areas:
+            "header header header"
+            "nav content content"
+            "footer footer footer";
+
+          grid-template-columns: 200px 1fr 200px;
+          grid-template-rows: auto 1fr auto;
+          grid-gap: 10px;
+
+          height: 100vh;
+        }
+
+        header {
+          grid-area: header;
+        }
+
+        nav {
+          grid-area: nav;
+          margin-left: 0.5rem;
+        }
+
+        main {
+          grid-area: content;
+        }
+
+        aside {
+          grid-area: side;
+          margin-right: 0.5rem;
+        }
+
+        footer {
+          grid-area: footer;
+        }
+
+
+    </style>
 </head>
 <body>
-<h1>Inbox</h1>
 
-    <div th:each="folder : ${userFolders}">
-        <p th:text="${folder.label}"></p>
-    </div>
+<div class="container">
+    <header>
+        <h1>Hi, Name</h1>
+    </header>
+
+    <nav>
+        <!-- Navigation -->
+
+        <!-- Lists the Defaults Inbox Folders -->
+        <div th:insert="components/folder-list :: folder-list (panelName = 'Inbox Folders', folders = ${defaultFolders})"></div>
+        <!-- Lists the User Inbox Folders -->
+        <div th:insert="components/folder-list :: folder-list (panelName = 'User Folders', folders = ${userFolders})"></div>
+    </nav>
+
+    <main>
+        <!-- Main content -->
+        <p>Emails</p>
+    </main>
+
+    <aside>
+        <!-- Sidebar / Ads -->
+    </aside>
+
+    <footer>
+        <!-- Footer content -->
+    </footer>
+</div>
+
 
 </body>
 </html>
