Added listing email items per folder functionality, both in backend and frontend. Created TimeDate formatting util. Refactored usage of repositories in Controller into Services, to isolate layers further.

--- a/src/main/resources/templates/inbox-page.html
+++ b/src/main/resources/templates/inbox-page.html
@@ -71,7 +71,22 @@
 
     <main>
         <!-- Main content -->
-        <p>Emails</p>
+        <!--TODO: Extract below to a separate Thymeleaf component -->
+        <div class="card" th:if="${emailItems}">
+            <div class="card-header">Emails</div>
+            <div class="card-body">
+                <div class="list-group">
+                    <a th:each="emailItem : ${emailItems}"
+                       href="#" class="list-group-item list-group-item-action flex-column align-items-start">
+                        <div class="d-flex w-100 justify-content-between">
+                            <h5 class="mb-1" th:text="${emailItem.subject}">Item Heading</h5>
+                            <small th:text="${emailItem.timeAgoString}">Days ago</small>
+                        </div>
+                        <p class="mb-1" th:text="'To: ' + ${emailItem.to}">To</p>
+                    </a>
+                </div>
+            </div>
+        </div>
     </main>
 
     <aside>
